chore: add minimal application example

--- a/package.json
+++ b/package.json
@@ -2,12 +2,36 @@
   "name": "express-example",
   "version": "1.0.0",
   "description": "Example app made in Express",
-  "main": "src/index.js",
+  "main": "src/main/server.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node --experimental-specifier-resolution=node src/main/server.js",
+    "dev": "nodemon --watch src/ --exec node --experimental-specifier-resolution=node src/main/server.js",
+    "test": "jest",
+    "lint": "standard --verbose | snazzy",
+    "lint:fix": "standard --fix --verbose | snazzy"
   },
   "author": "Douglas Moura <douglas.ademoura@gmail.com> (https://douglasmoura.dev)",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@wesleytodd/openapi": "^0.1.0",
+    "dotenv": "^11.0.0",
+    "express": "^4.17.2"
+  },
+  "devDependencies": {
+    "@swc/core": "^1.2.128",
+    "@swc/jest": "^0.2.16",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.8",
+    "jest": "^27.4.7",
+    "nodemon": "^2.0.15",
+    "snazzy": "^9.0.0",
+    "standard": "^16.0.4",
+    "supertest": "^6.2.1"
+  },
+  "standard": {
+    "env": [
+      "jest"
+    ]
+  }
 }
